[tool.poetry]
name = "idl2js"
version = "0.1.3"
description = "Grammar-based Fuzzer that uses WebIDL as a grammar."
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/PrVrSs/idl2js"
homepage = "https://github.com/PrVrSs/idl2js"

keywords = [
    "WebIDL",
    "fuzzer",
    "ast",
    "grammar",
    "fuzzing",
    "transpiler",
]

[tool.poetry.dependencies]
python = "^3.10"

more-itertools = "^8.14.0"
stringcase = "^1.2.0"
graphviz = "^0.20.1"
click = "^8.1.3"
pywebidl2 = "0.1.7"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.5"
isort = "^5.12.0"

Sphinx = "^7.0.1"
m2r2 = "^0.3.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
