[tool.poetry]
name = "idl2js"
version = "0.1.3"
description = "Grammar-based Fuzzer that uses WebIDL as a grammar."
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/PrVrSs/idl2js"
homepage = "https://github.com/PrVrSs/idl2js"

keywords = [
    "WebIDL",
    "fuzzer",
    "ast",
    "grammar",
    "fuzzing",
    "transpiler",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

more-itertools = ">=8.14,<10.0"
stringcase = "^1.2.0"
graphviz = "^0.20.1"
click = "^8.1.3"
pywebidl2 = "0.1.7"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
mypy = "^1.5"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pylint = "3.0.2"
isort = "^5.13.2"

Sphinx = "^7.0.1"
m2r2 = "^0.3.3"
sphinx-autodoc-typehints = "^1.23.4"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-hoverxref = "^1.3.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
