[tool.poetry]
name = "idl2js"
version = "0.1.3"
description = "Grammar-based Fuzzer that uses WebIDL as a grammar."
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/PrVrSs/idl2js"
homepage = "https://github.com/PrVrSs/idl2js"

keywords = [
    "WebIDL",
    "fuzzer",
    "ast",
    "grammar",
    "fuzzing",
    "transpiler",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

more-itertools = ">=8.14,<9.0"
stringcase = "^1.2.0"
graphviz = "^0.21"
click = "^8.3.1"
pywebidl2 = "0.1.7"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pylint = "^4.0.5"
isort = "^8.0.0"

Sphinx = "^9.1.0"
m2r2 = "^0.3.4"
sphinx-autodoc-typehints = "^3.6.3"
sphinxcontrib-mermaid = "^2.0.0"
sphinx-hoverxref = "^1.4.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
